tmux,vim: fix color of vim in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
-set -g default-terminal "screen-256color"
+set-option -gs default-terminal "tmux-256color"
+set-option -gas terminal-overrides "*:Tc"
+set-option -gas terminal-overrides "*:RGB"
 set -g mouse on
 
 set-window-option -g mode-keys vi
