--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,18 @@
+# true color
 set-option -gs default-terminal "tmux-256color"
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
+
+# mouse
 set -g mouse on
 
+# vim
 set-window-option -g mode-keys vi
+
+# clipboard
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# unlimited history
+set -g history-limit 999999999
