--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,3 +16,8 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection cl
 
 # unlimited history
 set -g history-limit 999999999
+
+# create new windows on current directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
