tmux: create new windows on current directory

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,8 @@
 set -g default-terminal "screen-256color"
 set -g mouse on
 set-window-option -g mode-keys vi
+# create new windows on current directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
