tmux: disable annoying bell

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -21,3 +21,6 @@ set -g history-limit 999999999
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# disable annoying bell!
+set -g bell-action none
