--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,26 +1,26 @@
-# true color
+# fold this file in vim
+# vim:foldmethod=marker:foldmarker=[[[,]]]
+
+# true color[[[1
 set-option -gs default-terminal "tmux-256color"
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
-
-# mouse
-set -g mouse on
-
-# vim
-set-window-option -g mode-keys vi
-
-# clipboard
+# ]]]
+# clipboard[[[1
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# unlimited history
-set -g history-limit 999999999
-
-# create new windows on current directory
+# ]]]
+# new windows on current directory[[[1
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-
+# ]]]
+# mouse
+set -g mouse on
+# vi mode
+set-window-option -g mode-keys vi
+# unlimited history
+set -g history-limit 999999999
 # disable annoying bell!
 set -g bell-action none
