--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,6 +1,3 @@
-# fold this file in vim
-# vim:foldmethod=marker:foldmarker=[[[,]]]
-
 # true color[[[1
 set-option -gs default-terminal "tmux-256color"
 set-option -gas terminal-overrides "*:Tc"
@@ -21,6 +18,9 @@ set -g mouse on
 # vi mode
 set-window-option -g mode-keys vi
 # unlimited history
-set -g history-limit 999999999
+set -g history-limit 9999
 # disable annoying bell!
 set -g bell-action none
+
+# fold this file in vim
+# vim:foldmethod=marker:foldmarker=[[[,]]]
