tmux: simplify color config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,7 +1,6 @@
-# true color[[[1
-set-option -gs default-terminal "tmux-256color"
-set-option -gas terminal-overrides "*:Tc"
-set-option -gas terminal-overrides "*:RGB"
+# 256 colors, true color[[[1
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*:Tc"
 # ]]]
 # clipboard[[[1
 bind-key -T copy-mode-vi v send -X begin-selection
