paru: update config

--- a/private_dot_config/paru/paru.conf
+++ b/private_dot_config/paru/paru.conf
@@ -15,14 +15,15 @@ Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #AurOnly
 #BottomUp
-#RemoveMake
-#SudoLoop
+RemoveMake = ask
+SudoLoop
 #UseAsk
 #SaveChanges
 #CombinedUpgrade
 #CleanAfter
-#UpgradeMenu
-#NewsOnUpgrade
+UpgradeMenu
+NewsOnUpgrade
+CompletionInterval = 1
 
 #LocalRepo
 #Chroot
