tmux: fix ESC delay and autoread in vim...
`checkhealth` in neovim is awesome!

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -16,10 +16,14 @@ bind c new-window -c "#{pane_current_path}"
 set -g mouse on
 # vi mode
 set-window-option -g mode-keys vi
-# unlimited history
+# longer history
 set -g history-limit 9999
 # disable annoying bell!
 set -g bell-action none
+# fix ESC delay in vim
+set -sg escape-time 10
+# fix autoread in vim
+set -g focus-events on
 
 # fold this file in vim
 # vim:foldmethod=marker:foldmarker=[[[,]]]
