--- a/private_dot_config/paru/paru.conf
+++ b/private_dot_config/paru/paru.conf
@@ -15,11 +15,11 @@ Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #AurOnly
 #BottomUp
-RemoveMake = ask
+RemoveMake
 SudoLoop
 #UseAsk
 #SaveChanges
-#CombinedUpgrade
+CombinedUpgrade
 #CleanAfter
 UpgradeMenu
 #NewsOnUpgrade
