tmux: transparent status bar

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -24,6 +24,8 @@ set -g bell-action none
 set -sg escape-time 10
 # fix autoread in vim
 set -g focus-events on
+# transparent status bar
+set -g status-style bg=default
 
 # fold this file in vim
 # vim:foldmethod=marker:foldmarker=[[[,]]]
