coc.nvim: use shfmt as shell script formatter

--- a/dot_vim/coc-settings.json
+++ b/dot_vim/coc-settings.json
@@ -1,7 +1,10 @@
 // coc-settings.json
 {
   "diagnostic.checkCurrentLine": true,
-  "coc.source.file.ignoreHidden": false
+  "coc.source.file.ignoreHidden": false,
+  "diagnostic-languageserver.formatFiletypes": {
+    "sh": "shfmt"
+  }
 }
 
 // vim: filetype=jsonc
