--- a/private_dot_config/paru/paru.conf
+++ b/private_dot_config/paru/paru.conf
@@ -14,7 +14,7 @@ Devel
 Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #AurOnly
-#BottomUp
+BottomUp
 RemoveMake
 SudoLoop
 #UseAsk
