--- a/private_dot_config/private_fcitx5/private_conf/private_classicui.conf
+++ b/private_dot_config/private_fcitx5/private_conf/private_classicui.conf
@@ -21,5 +21,7 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLangaugeToDisplayText=True
 # Theme
-Theme=Material-Color-Black
+Theme=plasma
+# Force font DPI on Wayland
+ForceWaylandDPI=0
 
