--- a/private_dot_config/input-remapper/private_config.json
+++ b/private_dot_config/input-remapper/private_config.json
@@ -6,7 +6,9 @@
         "HID 2704:2018 2": "treadle",
         "RAPOO BT4.0 Mouse": "left-hand",
         "BT5.0 Mouse": "left-hand",
-        "RAPOO 5.0MS Mouse": "left-hand"
+        "RAPOO 5.0MS Mouse": "left-hand",
+        "ORBIT BT5.0 Mouse": "left-hand",
+        "Cherry GmbH CHERRY Corded Device": "mouse-buttons"
     },
     "macros": {
         "keystroke_sleep_ms": 0
