tmux: simplify comments

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,31 +1,24 @@
-# 256 colors, true color[[[1
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*:Tc"
-# ]]]
-# clipboard[[[1
+set -g default-terminal "tmux-256color" # 256 colors
+set -ga terminal-overrides ",*:Tc"      # true color
+set -g status-style bg=default          # transparent status bar
+
+set -g mouse on                         # enable mouse
+set -g history-limit 9999               # longer history
+set -g bell-action none                 # disable annoying bell!
+
+set-window-option -g mode-keys vi
+set -sg escape-time 10                  # fix Esc delay in Vim
+set -g focus-events on                  # fix autoread in Vim
+
+# clipboard
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-# ]]]
-# new windows on current directory[[[1
+
+# new windows on current directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-# ]]]
-# mouse
-set -g mouse on
-# vi mode
-set-window-option -g mode-keys vi
-# longer history
-set -g history-limit 9999
-# disable annoying bell!
-set -g bell-action none
-# fix ESC delay in vim
-set -sg escape-time 10
-# fix autoread in vim
-set -g focus-events on
-# transparent status bar
-set -g status-style bg=default
 
 # fold this file in vim
 # vim:foldmethod=marker:foldmarker=[[[,]]]
