nix: add BFSU mirror

--- a/private_dot_config/nix/nix.conf
+++ b/private_dot_config/nix/nix.conf
@@ -1,1 +1,6 @@
 experimental-features = nix-command flakes
+
+# To make substituters work, add current user to trusted-users and restart nix-daemon
+# echo "trusted-users = root $USER" | sudo tee --append /etc/nix/nix.conf
+# sudo systemctl restart nix-daemon.service
+substituters = https://mirrors.bfsu.edu.cn/nix-channels/store https://cache.nixos.org/
