--- a/private_dot_config/nix/nix.conf
+++ b/private_dot_config/nix/nix.conf
@@ -3,4 +3,7 @@ experimental-features = nix-command flakes
 # To make substituters work, add current user to trusted-users and restart nix-daemon
 # echo "trusted-users = root $USER" | sudo tee --append /etc/nix/nix.conf
 # sudo systemctl restart nix-daemon.service
-substituters = https://mirrors.bfsu.edu.cn/nix-channels/store https://cache.nixos.org/
+substituters = https://mirror.sjtu.edu.cn/nix-channels/store https://cache.nixos.org
+# speedtest: sjtu(11.3MiB) nju(8.1) bfsu(7.5)
+# substituters = https://mirrors.bfsu.edu.cn/nix-channels/store https://cache.nixos.org/
+# substituters = https://mirror.nju.edu.cn/nix-channels/store https://cache.nixos.org/
