fonts.conf: don't config chinese font

--- a/dot_fonts.conf
+++ b/dot_fonts.conf
@@ -2,6 +2,7 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <dir>~/.fonts</dir>
+  <!-- don't config chinese font
   <alias>
     <family>sans-serif</family>
     <prefer>
@@ -18,4 +19,5 @@
       <family>Noto Sans Mono CJK JP</family>
     </prefer>
   </alias>
+  -->
 </fontconfig>
