tmux: use C-Space as prefix key

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,8 @@
+# C-Space avoids C-b conflict with Vim
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
 set -g default-terminal "tmux-256color" # 256 colors
 set -ga terminal-overrides ",*:Tc"      # true color
 set -g status-style bg=default          # transparent status bar
