--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,7 +1,7 @@
-# C-Space avoids C-b conflict with Vim
+# avoid C-b conflict with Vim
 unbind C-b
 set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix2 C-S
 
 set -g default-terminal "tmux-256color" # 256 colors
 set -ga terminal-overrides ",*:Tc"      # true color
