--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,6 +2,8 @@
 unbind C-b
 set -g prefix C-Space
 set -g prefix2 C-S
+bind C-Space send-prefix # needed for nested sessions
+bind C-S send-prefix -2
 
 set -g default-terminal "tmux-256color" # 256 colors
 set -ga terminal-overrides ",*:Tc"      # true color
