tmux: show hint when pressing prefix

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,6 +8,8 @@ bind C-S send-prefix -2
 set -g default-terminal "tmux-256color" # 256 colors
 set -ga terminal-overrides ",*:Tc"      # true color
 set -g status-style bg=default          # transparent status bar
+# show hint when pressing prefix, https://stackoverflow.com/a/15308651/
+set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %H:%M %d-%b-%y'
 
 set -g mouse on                         # enable mouse
 set -g history-limit 9999               # longer history
