--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -13,7 +13,7 @@ set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:p
 
 set -g mouse on                         # enable mouse
 set -g history-limit 9999               # longer history
-set -g bell-action none                 # disable annoying bell!
+# set -g bell-action none               # disable annoying bell!
 
 set-window-option -g mode-keys vi
 set -sg escape-time 10                  # fix Esc delay in Vim
