--- a/private_dot_config/private_fcitx5/private_conf/private_pinyin.conf
+++ b/private_dot_config/private_fcitx5/private_conf/private_pinyin.conf
@@ -16,6 +16,10 @@ ExtBEnabled=True
 CloudPinyinEnabled=True
 # Cloud Pinyin Index
 CloudPinyinIndex=2
+# Show animation when Cloud Pinyin is loading
+CloudPinyinAnimation=True
+# Always show Cloud Pinyin place holder
+KeepCloudPinyinPlaceHolder=False
 # Show preedit within application
 PreeditInApplication=False
 # Fix embedded preedit cursor at the beginning of the preedit
