fcitx5: update config

--- a/private_dot_config/private_fcitx5/private_conf/private_classicui.conf
+++ b/private_dot_config/private_fcitx5/private_conf/private_classicui.conf
@@ -21,9 +21,11 @@ UseInputMethodLanguageToDisplayText=True
 # Theme
 Theme=plasma
 # Dark Theme
-DarkTheme=default-dark
+DarkTheme=default
 # Follow system light/dark color scheme
 UseDarkTheme=False
+# Follow system accent color if it is supported by theme and desktop
+UseAccentColor=True
 # Use Per Screen DPI on X11
 PerScreenDPI=True
 # Force font DPI on Wayland
