paru: skip compression to increase speed

--- a/private_dot_config/paru/paru.conf
+++ b/private_dot_config/paru/paru.conf
@@ -38,3 +38,7 @@ CompletionInterval = 1
 #FileManager = vifm
 #MFlags = --skippgpcheck
 #Sudo = doas
+
+[env]
+# skip compression to increase speed
+PKGEXT=.pkg.tar
